# SheetyRecognizer

./: README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
notebooks/: Untitled.ipynb
src/sheetyrecognizer/: __init__.py  __main__.py  datasets.py  pipeline_registry.py  settings.py
src/sheetyrecognizer/pipelines/: __init__.py
src/sheetyrecognizer/pipelines/data_science/: nodes.py  pipeline.py
src/sheetyrecognizer/pipelines/generate_data/: nodes.py  pipeline.py
