[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "sheetyrecognizer"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
sheetyrecognizer = "sheetyrecognizer.__main__:main"

[project.optional-dependencies]
docs = [ "docutils<0.18.0", "sphinx~=3.4.3", "sphinx_rtd_theme==0.5.1", "nbsphinx==0.8.1", "sphinx-autodoc-typehints==1.11.1", "sphinx_copybutton==0.3.1", "ipykernel>=5.3, <7.0", "Jinja2<3.1.0", "myst-parser~=0.17.2",]

[tool.kedro]
package_name = "sheetyrecognizer"
project_name = "SheetyRecognizer"
kedro_init_version = "0.19.6"
tools = [ "Linting", "Custom Logging", "Documentation", "Data Structure",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "sheetyrecognizer.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
